# AuthPulse

./: .gitignore  README.md  pyproject.toml  requirements.txt
authpulse/: __init__.py  cli.py  qr.py  secret.py  totp.py  verify.py
authpulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_qr.py  test_secret.py  test_totp.py  test_verify.py
